; ModuleID = '/home/carl/AnghaBench/vim.js/src/extr_ex_cmds.c_not_writing.c'
source_filename = "/home/carl/AnghaBench/vim.js/src/extr_ex_cmds.c_not_writing.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@p_write = common dso_local global i64 0, align 8
@FALSE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [62 x i8] c"E142: File not written: Writing is disabled by 'write' option\00", align 1
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @not_writing() #0 {
  %1 = alloca i32, align 4
  %2 = load i64, i64* @p_write, align 8
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %6

4:                                                ; preds = %0
  %5 = load i32, i32* @FALSE, align 4
  store i32 %5, i32* %1, align 4
  br label %10

6:                                                ; preds = %0
  %7 = call i32 @_(i8* getelementptr inbounds ([62 x i8], [62 x i8]* @.str, i64 0, i64 0))
  %8 = call i32 @EMSG(i32 %7)
  %9 = load i32, i32* @TRUE, align 4
  store i32 %9, i32* %1, align 4
  br label %10

10:                                               ; preds = %6, %4
  %11 = load i32, i32* %1, align 4
  ret i32 %11
}

declare dso_local i32 @EMSG(i32) #1

declare dso_local i32 @_(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
